--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -67,7 +67,7 @@
 	},
 	"projects": {
 		"title": "Мои проекты",
-		"description": "<0>Коллекция моих любимых проектов, которые я недавно разработал. Чувствую себя прекрасно, делясь здесь.</0><0>Коллекция моих любимых проектов, которые я недавно разработал. Чувствую себя прекрасно, делясь здесь.</0>",
+		"description": "<0>Здесь будут размещаться мои проекты, которые делал под заказ или просто так ради удовольствия.</0><0>В основном это коммерческие интернет-магазины, CRM админки, веб и мобильные приложения.</0>",
 		"button": "Загрузи больше",
 		"items": {
 			"0": {
@@ -86,28 +86,28 @@
 	},
 	"prising": {
 		"title": "Таблица цен",
-		"description": "<0> Вам интересно работать со мной? Вот мой прайс-лист на работы, связанные с дизайном. [Давайте поговорим] (https://www.google.com) о проекте! </0> <0> Donec imperdiet risus at toror consquat maximus et. </0>",
+		"description": "<0>Здесь я разместил прайс-лист на работы связанные с моими скилами. Здесь три варианты ценообразования, выбирай самый выгодный.</0><0>В любом случае можно договориться (:</0>",
 		"tables": {
 			"0": {
 				"title": "На постоянной основе",
 				"subTitle": "Доступно на полную ставку",
 				"price": "$1200",
 				"button": "Найми меня",
-				"skills": "<0> Дизайн бренда </0> <0> Реклама </0> <0> Веб-разработка </0> <0> Фотография </0>"
+				"skills": "<0>Поддержка</0><0>Любая сложность</0> <0>Сложная логика</0> <0>Маштабируемость</0>"
 			},
 			"1": {
-				"title": "Project Wise",
+				"title": "Конкретный проект",
 				"subTitle": "Доступно для фриланса",
 				"price": "$400",
 				"button": "Найми меня",
-				"skills": "<0> Дизайн бренда </0> <0> Реклама </0> <0> Веб-разработка </0> <0> Фотография </0>"
+				"skills": "<0>Поддержка</0><0>Средняя сложность</0> <0>Средняя логика</0> <0>Маштабируемость</0>"
 			},
 			"2": {
 				"title": "Ежечасно",
-				"subTitle": "Доступно для базиса Хурли",
+				"subTitle": "Доступно на данном сайте",
 				"price": "$60",
 				"button": "Найми меня",
-				"skills": "<0> Дизайн бренда </0> <0> Реклама </0> <0> Веб-разработка </0> <0> Фотография </0>"
+				"skills": "<0>нет</0><0>Улутшение</0> <0>Оптимизация</0><0>Небольшой обьем работ</0>"
 			}
 		},
 		"reviews": {
@@ -140,7 +140,7 @@
 	},
 	"blog": {
 		"title": "Мой Блог",
-		"description": "<0> Коллекция моих любимых проектов, которые я недавно разработал. Прекрасное настроение, когда делюсь здесь. </0> <0> Donec imperdiet risus at toror consquat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo tristique ut. </0>",
+		"description": "<0>В моем блоге будет немного статей на интересные темы, где я кратко попытаюсь расписать основные проблемы и их решения.</0><0>Даже буду иногда сюда заходить и что-то смотреть, возможно.</0>",
 		"articles": [
 			{
 				"time": "8 мин на чтение",
@@ -167,24 +167,24 @@
 	},
 	"clients": {
 		"title": "Мои клиенты",
-		"description": "Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации."
+		"description": "<0>Все клиенты, которые воспользовались моими услугами, могут разместить свой логотип здесь.</0>"
 	},
 	"contact": {
 		"title": "Контакт со мной",
-		"description": "Есть вопрос? или просто хотите поздороваться? Напишите мне сообщение!",
-		"button": "Отправить сообщение",
+		"description": "У Вас есть вопросы? Просто напишите мне в сообщении!",
+		"button": "Отправить",
 		"phone": {
-			"icon": "+800 234 5678",
+			"icon": "+38 (050) 061-21-26",
 			"label": "Имя",
 			"placeholder": "Введите свое полное имя"
 		},
 		"email": {
-			"icon": "hi@robertlong.com",
+			"icon": "artyrpridatko@gmail.com",
 			"label": "Емаил",
 			"placeholder": "Введите ваш адрес электронной почты"
 		},
 		"message": {
-			"icon": "43rd Street River Point NY 1023",
+			"icon": "г. Сумы, ул. Прокофьева",
 			"label": "Сообщение",
 			"placeholder": "Введите свой полный адрес"
 		}
