--- a/locales/uk/home.json
+++ b/locales/uk/home.json
@@ -70,7 +70,7 @@
 	},
 	"projects": {
 		"title": "Мої проекти",
-		"description": "<0> Колекція моїх улюблених проектів, які я недавно розробив. Відчуваю себе чудово, ділячись тут. </0> <0> Колекція моїх улюблених проектів, які я недавно розробив. Відчуваю себе чудово, ділячись тут. </0>",
+		"description": "<0>Тут будуть розміщуватися мої проекти, які робив під замовлення або просто так заради задоволення.</0><0>В основному це комерційні інтернет-магазини, CRM адмінки, веб і мобільні додатки.</0>",
 		"button": "Завантаж більше",
 		"items": {
 			"0": {
@@ -89,28 +89,28 @@
 	},
 	"prising": {
 		"title": "Таблиця цін",
-		"description": "<0> Вам цікаво працювати зі мною? Ось мій прайс-лист на роботи, пов'язані з дизайном. [Давайте поговоримо] (https://www.google.com) про проект! </0> <0> Donec imperdiet risus at toror consquat maximus et. </0>",
+		"description": "<0>Тут я розмістив прайс-лист на роботи пов'язані з моїми скілами. Вибирай один із трьох варіантів ціноутворення, вибирай найвигідніший.</0><0>У будь-якому випадку можна домовитися (:</0>",
 		"tables": {
 			"0": {
 				"title": "На постійній основі",
 				"subTitle": "Доступно на повну ставку",
 				"price": "$1200",
 				"button": "Найми мене",
-				"skills": "<0> Дизайн бренду </0> <0> Реклама </0> <0> Веб-розробка </0> <0> Фотографія </0>"
+				"skills": "<0>Підтримка</0><0>Будь-яка складність</0> <0>Складна логіка</0> <0>Масштабованість</0>"
 			},
 			"1": {
-				"title": "Project Wise",
+				"title": "Конкретний проект",
 				"subTitle": "Доступно для фрілансу",
 				"price": "$400",
 				"button": "Найми мене",
-				"skills": "<0> Дизайн бренду </0> <0> Реклама </0> <0> Веб-розробка </0> <0> Фотографія </0>"
+				"skills": "<0>Підтримка</0><0>Середня складність</0> <0>Середня логіка</0> <0>Масштабованість</0>"
 			},
 			"2": {
 				"title": "Щогодини",
-				"subTitle": "Доступно для базису Хурлі",
+				"subTitle": "Доступно на цьому сайті",
 				"price": "$60",
 				"button": "Найми мене",
-				"skills": "<0> Дизайн бренду </0> <0> Реклама </0> <0> Веб-розробка </0> <0> Фотографія </0>"
+				"skills": "<0>немає</0><0>Поліпшення</0> <0>Оптимізація</0><0>Невеликий обсяг робіт</0>"
 			}
 		},
 		"reviews": {
@@ -143,7 +143,7 @@
 	},
 	"blog": {
 		"title": "Мій Блог",
-		"description": "<0>Колекція моїх улюблених проектів, які я недавно розробив. Чудовий настрій, коли ділюся тут. </0> <0> Donec imperdiet risus at toror consquat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo tristique ut. </0>",
+		"description": "<0>На моєму порталі буде трохи статей на цікаві теми, де я коротко спробую розписати основні проблеми та їх вирішення.</0><0>Навіть буду іноді сюди заходити і щось дивитися, можливо.</0>",
 		"articles": [
 			{
 				"time": "8 хв на читання",
@@ -170,30 +170,30 @@
 	},
 	"clients": {
 		"title": "Мої Клієнти",
-		"description": "Давно з'ясовано, що при оцінці дизайну і композиції читається текст заважає зосередитися. Lorem Ipsum використовують тому, що той забезпечує більш-менш стандартний заповнення шаблону, а також реальний розподіл букв і пробілів в абзацах, яке не виходить за простій дублікації."
+		"description": "<0>Всі клієнти, які скористалися моїми послугами, можуть розмістити свій логотип тут.</0>"
 	},
 	"contact": {
 		"title": "Контакт зі мною",
-		"description": "Є питання? або просто хочете привітатися? Напишіть мені по електронній пошті!",
-		"button": "Надіслати повідомлення",
+		"description": "У вас є питання? Просто напишіть мені в повідомленні!",
+		"button": "Надіслати",
 		"phone": {
-			"icon": "+800 234 5678",
+			"icon": "+38 (050) 061-21-26",
 			"label": "Ім'я",
 			"placeholder": "Введіть своє повне ім'я"
 		},
 		"email": {
-			"icon": "hi@robertlong.com",
+			"icon": "artyrpridatko@gmail.com",
 			"label": "Пошта",
 			"placeholder": "Введіть Вашу email пошту"
 		},
 		"message": {
-			"icon": "43rd Street River Point NY 1023",
+			"icon": "м. Суми, вул. Прокофьева",
 			"label": "Повідомлення",
 			"placeholder": "Введіть адресу вашої електронної пошти"
 		}
 	},
 	"footer": {
-		"copyright": "© 2021 RobertLong.com, Всі права захищені",
+		"copyright": "website.com, Всі права захищені",
 		"designedBy": "Designed by WebDuck"
 	}
 }
