--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -1,4 +1,8 @@
 {
+	"seo": {
+		"title": "Сайт-портфолио Артура Придатко",
+		"description": "Персональный сайт Артура Придатко. Создание современных веб-проектов, магазинов, админ-панелей, разработка мобильных приложений, SEO оптимизация."
+	},
 	"welcome": {
 		"title": "Артур Придатко",
 		"subtitle": "Фронт-енд разработчик",
@@ -190,7 +194,7 @@
 		}
 	},
 	"footer": {
-		"copyright": "© 2021 RobertLong.com, Все права защищены",
-		"designedBy": "Designed by WebDuck"
+		"copyright": "Все права защищены",
+		"designedBy": "Designed by "
 	}
 }
