--- a/locales/uk/home.json
+++ b/locales/uk/home.json
@@ -1,4 +1,8 @@
 {
+	"seo": {
+		"title": "Сайт-портфоліо Артура Придатка",
+		"description": "Персональний сайт Артура Придатко. Створення сучасних веб-проектів, магазинів, адмін панелей, розробка мобільних додатків, SEO оптимізація."
+	},
 	"welcome": {
 		"title": "Артур Придатко",
 		"subtitle": "Фронт-енд розробник",
@@ -193,7 +197,7 @@
 		}
 	},
 	"footer": {
-		"copyright": "website.com, Всі права захищені",
-		"designedBy": "Designed by WebDuck"
+		"copyright": "Всі права захищені",
+		"designedBy": "Designed by "
 	}
 }
