--- a/locales/uk/common.json
+++ b/locales/uk/common.json
@@ -18,19 +18,17 @@
 		{
 			"id": 2,
 			"name": "Проекти",
-			"hash": null,
-			"url": "projects"
+			"hash": "projects"
 		},
 		{
 			"id": 3,
-			"name": "Блог",
-			"hash": null,
-			"url": "blog"
+			"name": "Контакти",
+			"hash": "contact"
 		},
 		{
 			"id": 4,
-			"name": "Контакти",
-			"hash": "contact"
+			"name": "Карта",
+			"hash": "map"
 		}
 	]
 }
