--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -6,7 +6,7 @@
 	"welcome": {
 		"title": "Артур Придатко",
 		"subtitle": "Фронт-енд разработчик",
-		"description": "Я веб разработчик из г.Сумы. Мне нравиться путешествовать, фотографировать и слушать музыку.",
+		"description": "Я веб разработчик из Сум. Мне нравиться путешество-вать, фотографировать и слушать музыку.",
 		"quickInformation": {
 			"0": {
 				"headline": "Родился в",
