Исправил баги, улутшил мобильню версию и веб

--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -5,26 +5,26 @@
 	},
 	"welcome": {
 		"title": "Артур Придатко",
-		"subtitle": "Фронт-енд разработчик",
-		"description": "Я веб разработчик из Сум. Мне нравиться путешество-вать, фотографировать и слушать музыку.",
+		"subtitle": "JS разработчик",
+		"description": "Разрабатываю магазины, веб-сайты, мобильные приложения, CRM-системы управления.",
 		"quickInformation": {
 			"0": {
-				"headline": "Родился в",
-				"text": "Сумы"
+				"headline": "Локация",
+				"text": "Украина, Сумы"
 			},
 			"1": {
 				"headline": "Опыт работы",
 				"text": "2+ лет"
 			},
 			"2": {
-				"headline": "Дата рождения",
-				"text": "15 Ноября 1990"
+				"headline": "Основное направление",
+				"text": "Front-end"
 			}
 		}
 	},
 	"about":{
 		"title": "Обо мне",
-		"description": "<0>Меня зовут Артур Придатко. Я начал изучать веб-разработку с 2019 года. Мне нравиться создавать простые интерфейсы, которые выполняют сложный функционал. Люблю экспериментировать с кодом, проверяю лучшие подходы, выбираю современные практики.</0><0>В основном я занимался разработкой небольших интернет-магазинов с нуля, приложений по доставке еды или услуг, CRM панелей для учёта и редактирования товарных позиций.</0><0>Большую часть работы я делаю front-end разработку, но я также немного делаю back-end для обработки запросов, работы с сервисами.</0><0>В процессе своей работы я хорошо понимаю, что хочет заказчик и пытаюсь найти лучшее решение в данный момент времени. Я люблю свою работу и хочу, чтобы мои заказчики были довольны тоже!</0>",
+		"description": "<0>Меня зовут Артур Придатко. Я начал изучать веб-разработку с 2019 года. Мне нравиться создавать простые интерфейсы, которые выполняют сложный функционал. Люблю экспериментировать с кодом, проверяю лучшие подходы, выбираю современные практики.</0><0>В основном я занимался разработкой небольших интернет-магазинов с нуля, приложений по доставке еды или услуг, CRM панелей для учёта и редактирования товарных позиций.</0><0>Основную часть работы я работаю как front-end разработчик, но я также делаю back-end для обработки запросов, работы с сервисами или создания приложения с нуля.</0><0>В процессе своей работы я хорошо понимаю, что хочет заказчик и пытаюсь найти лучшее решение в данный момент времени. Я люблю свою работу и хочу, чтобы мои заказчики были довольны тоже!</0>",
 		"button": "Посмотреть резюме",
 		"successProject": "Успешных проектов",
 		"happyClients": "Счасливых клиентов",
