--- a/locales/uk/home.json
+++ b/locales/uk/home.json
@@ -5,26 +5,26 @@
 	},
 	"welcome": {
 		"title": "Артур Придатко",
-		"subtitle": "Фронт-енд розробник",
-		"description": "Я розробник із м.Суми. Мені подобається подорожувати, фотографувати та слухати музику.",
+		"subtitle": "JS розробник",
+		"description": "Розробляю магазини електронної комерції, веб-сайти, мобільні програми, CRM-системи управління.",
 		"quickInformation": {
 			"0": {
-				"headline": "Народився в",
-				"text": "Суми"
+				"headline": "Локація",
+				"text": "Україна, Суми"
 			},
 			"1": {
 				"headline": "Досвід роботи",
 				"text": "2+ років"
 			},
 			"2": {
-				"headline": "Дата народження",
-				"text": "15 Листопада 1990"
+				"headline": "Напрям розробки",
+				"text": "Front-end"
 			}
 		}
 	},
 	"about":{
 		"title": "Про мене",
-		"description": "<0>Мене звуть Артур Придатко. Я почав вивчати веб-розробку з 2019 року. Мне подобається створювати прості інтерфейси, які виконують складний функціонал. Люблю експериментувати з кодом, перевіряю кращі підходи, вибираю сучасні практики.</0><0>В основному я займався розробкою невеликих інтернет-магазинів з нуля, додатків з доставки їжі або послуг, CRM панелей для обліку та редагування товарних позицій.</0><0>Більшу частину роботи я роблю front-end розробку, але я також трохи роблю back-end для обробки запитів, роботи з сервісами.</0><0>В процесі своєї роботи я добре розумію, що хоче замовник і намагаюся знайти краще рішення в даний момент часу. Я люблю свою роботу і хочу, щоб мої замовники були задоволені теж!</0>",
+		"description": "<0>Мене звуть Артур Придатко. Я почав вивчати веб-розробку з 2019 року. Мені подобається створювати прості інтерфейси, які виконують складний функціонал. Люблю експериментувати з кодом, перевіряю кращі підходи, вибираю сучасні практики.</0><0>В основному я займаюся розробкою комерційних інтернет-магазинів, додатків з доставки їжі або послуг, CRM панелей для обліку та редагування товарних позицій.</0><0>Основну частину роботи я працюю як front-end розробник, але я також роблю back-end для обробки запитів, роботи з сервісами, або створення додатку з нуля.</0><0>В процесі своєї роботи я добре розумію, що хоче замовник і намагаюся знайти краще рішення в даний момент часу. Я люблю свою роботу і хочу, щоб мої замовники були задоволені теж!</0>",
 		"button": "Подивитися резюме",
 		"successProject": "Успішних проектів",
 		"happyClients": "Щасливих клієнтів",
