--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -5,26 +5,26 @@
 	},
 	"welcome": {
 		"title": "Artyr Prydatko",
-		"subtitle": "Front-end developer",
-		"description": "I'm a Front-End Developer based in Sumy. I love travelling, photography & music.",
+		"subtitle": "JS developer",
+		"description": "I develop e-commerce stores, websites, mobile applications, CRM management systems.",
 		"quickInformation": {
 			"0": {
-				"headline": "Born in",
-				"text": "Sumy"
+				"headline": "Location",
+				"text": "Ukraine, Sumy"
 			},
 			"1": {
 				"headline": "Expirience",
 				"text": "2+ Years"
 			},
 			"2": {
-				"headline": "Date of Birth",
-				"text": "15 November 1990"
+				"headline": "Main direction",
+				"text": "Front-end"
 			}
 		}
 	},
 	"about":{
 		"title": "About Me",
-		"description": "<0>My name is Artur Pridatko. I started learning web development in 2019. I like to create simple interfaces that do complex functionality. I love experimenting with code, testing the best approaches, choosing modern practices.</0><0>Basically, I was engaged in the development of small e-commerce websites from scratch, applications for the delivery of food or services, CRM panels for accounting and editing of commodity items.</0><0>Most of the work I do with front-end rules, but I also do a little backend for handling requests, working with services.</0><0>In the course of my work, I understand well what the customer wants and try to find the best solution at a given time. I love my job and I want my customers to be happy too!</0>",
+		"description": "<0>My name is Artur Pridatko. I started learning web development in 2019. I like to create simple interfaces that do complex functionality. I love experimenting with code, testing the best approaches, and choosing modern practices.</0><0>Basically, I was engaged in the development of small e-commerce websites from scratch, applications for the delivery of food or services, CRM panels for accounting and editing of commodity items.</0><0>Most of the work I do with front-end rules, but I also do a backend for handling requests, working with services.</0><0>In the course of my work, I understand well what the customer wants and try to find the best solution at a given time. I love my job and I want my customers to be happy too!</0>",
 		"button": "View Resume",
 		"successProject": "Successful Project",
 		"happyClients": "Happy Clients",
