--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -48,10 +48,10 @@
 		},
 		"expertise": {
 			"title": "Экспертиза",
-			"0": "Разработка приложений",
-			"1": "Разработка веб",
+			"0": "Веб розробка",
+			"1": "Разработка мобильных приложений",
 			"2": "Панели управления сайтов",
-			"3": "Настройка и оптимизация для поисковых систем"
+			"3": "SEO оптимизация"
 		},
 		"experience": {
 			"title": "Опыт",
@@ -59,7 +59,7 @@
 				"date": "2020 - сейчас",
 				"company": "Ithinkers",
 				"position": "Фронт/веб разработчик",
-				"description": "Занимаюсь разработкой e-commerce магазинов, делаю приложения по доставке еды, разрабатываю CRM сайт по управлению продуктами."
+				"description": "Разрабатываю коммерческие веб-приложения для продажи еды и доставки, CRM панели, налаживаю SEO."
 			},
 			"1": {
 				"date": "2019 - 2020",
@@ -190,7 +190,7 @@
 		"message": {
 			"icon": "г. Сумы, ул. Прокофьева",
 			"label": "Сообщение",
-			"placeholder": "Введите свой полный адрес"
+			"placeholder": "Введите текстовое сообщение"
 		}
 	},
 	"footer": {
