--- a/locales/uk/home.json
+++ b/locales/uk/home.json
@@ -51,10 +51,10 @@
 		},
 		"expertise": {
 			"title": "Експертиза",
-			"0": "Розробка додатків",
-			"1": "Разработка веб",
+			"0": "Веб розробка",
+			"1": "Розробка мобільних додатків",
 			"2": "Панелі управління сайтів",
-			"3": "Налагодження та оптимізація для пошукових систем"
+			"3": "SEO оптимізація"
 		},
 		"experience": {
 			"title": "Досвід",
@@ -62,13 +62,13 @@
 				"date": "2020 - зараз",
 				"company": "Ithinkers",
 				"position": "Фронт/веб розробник",
-				"description": "Займаюся розробкою e-commerce магазинів, роблю додатки з доставки їжі, розробляю CRM сайт з управління продуктами."
+				"description": "Розробляю комерційні веб додатки для продажу їжі та доставки,  CRM панелі, налагоджую SEO."
 			},
 			"1": {
 				"date": "2019 - 2020",
 				"company": "ZenBit Tech",
 				"position": "Фронт - енд розробник",
-				"description": "Займався додаванням нового функціоналу в додаток для доставки замовлень, реалізацією нових функцій."
+				"description": "Створював проект по доставці товарів, веб сайт додатку, адмінка та бекенд."
 			}
 		}
 	},
@@ -193,7 +193,7 @@
 		"message": {
 			"icon": "м. Суми, вул. Прокофьева",
 			"label": "Повідомлення",
-			"placeholder": "Введіть адресу вашої електронної пошти"
+			"placeholder": "Введіть текстове повідомлення"
 		}
 	},
 	"footer": {
